--- a/ffsjp/templates/index.html
+++ b/ffsjp/templates/index.html
@@ -1,6 +1,10 @@
 {% extends "base/base.html" %}
 
 {% block content %}
-	Home page
+	<div class="row">
+		<div class="col-md-12">
+			{{ base.content }}
+		</div>
+	</div>
 {% endblock %}
 
