--- a/ffsjp/templates/base/base.html
+++ b/ffsjp/templates/base/base.html
@@ -2,10 +2,11 @@
 <html>
 <head>
 	<meta charset="UTF-8" />
+	<meta http-equiv="content-language" content="ru" />
 	<title>{{ base.title }}</title>
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.min.css') }}" />
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}" />
-	<script src="{{ url_for('static', filename='js/jquery-2.1.3.min.js') }}"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
 </head>
 <body>
@@ -19,7 +20,7 @@
 					<div class="collapse navbar-collapse">
 						<ul class="nav navbar-nav">
 							{% for punct in base.menus %}
-							<li{{ punct.active|safe }}><a href="{{ url_for(punct.url) }}">{{ punct.title }}</a></li>
+							<li{{ punct.active|safe }}><a href="{{ url_for('page', page_name=punct.url) }}">{{ punct.title }}</a></li>
 							{% endfor %}
 						</ul>
 					</div>
