--- a/ffsjp/templates/services.html
+++ b/ffsjp/templates/services.html
@@ -1,6 +1,7 @@
 {% extends "base/base.html" %}
 
 {% block content %}
-	Services
+	<h1 class="title">Сервисы</h1>
+	{{ base.content }}
 {% endblock %}
 
